Add zuul-sphinx requirements
Change-Id: Idf241ca9c76697480763e233f3c7fc31e38be74c

--- a/zuul.d/templates.yaml
+++ b/zuul.d/templates.yaml
@@ -75,7 +75,7 @@
     name: sf-incubation-jobs
     check:
       jobs:
-        - sf-rpm-build
+        - noop
     gate:
       queue: sf
       jobs:
