Move zuul-jobs to scl
Change-Id: I2c47ec99a04f70d3e73be5d321a01660d469b767

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -263,6 +263,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/zuul-jobs
+    source: external
+    scl: rh-python35
+
 #os-client-config
   - name: scl/python-stevedore
     source: external
@@ -555,8 +559,6 @@ packages:
   - name: software-factory/nodepool3
     source: external
   - name: software-factory/python-os-client-config
-    source: external
-  - name: software-factory/zuul-jobs
     source: external
   - name: software-factory/haveged
     source: external
