zuul-jobs: enable sf jobs
Change-Id: I889928ff82b734e0b6f89dbd84e6fea0abd58eff

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -26,7 +26,7 @@
 - project:
     name: scl/zuul-jobs-distgit
     templates:
-      - sf-incubation-jobs
+      - sf-jobs-light
 
 - project:
     name: software-factory/haveged-distgit
