Add sf-python-jobs for internal sf python project
Change-Id: I4e13b4c9a2198c506a215ecf5650e61c2a6b5ea5

--- a/zuul.d/templates.yaml
+++ b/zuul.d/templates.yaml
@@ -86,3 +86,15 @@
     release:
       jobs:
         - sf-rpm-publish
+
+- project-template:
+    name: sf-python-jobs
+    check:
+      jobs:
+        - tox-pep8
+        - tox-py27
+    gate:
+      queue: sf
+      jobs:
+        - tox-pep8
+        - tox-py27
