--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -38,6 +38,42 @@
 #    templates:
 #      - sf-jobs
 
+# Internal SF python projects
+#- project:
+#    name: software-factory/managesf
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/pysflib
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/cauth
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/python-sfmanager
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/hydrant
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/ochlero
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
 
 # Zuul sphinx req
 - project:
