Add sf-python-jobs for internal sf python project
Change-Id: I4e13b4c9a2198c506a215ecf5650e61c2a6b5ea5

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -38,6 +38,30 @@
 #    templates:
 #      - sf-jobs
 
+# Internal SF python projects
+#- project:
+#    name: software-factory/managesf
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/pysflib
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/cauth
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
+#
+#- project:
+#    name: software-factory/sfmanager
+#    templates:
+#      - sf-python-jobs
+#      - sf-jobs
 
 # Zuul sphinx req
 - project:
