Add zuulv3 swagger jobs for managesf
Change-Id: Id8a50fdbb4365e2f2bc16f4a998a76658a4419f8

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -23,3 +23,23 @@
       nodes:
         - name: mock-host
           label: dib-centos-7
+
+- job:
+    name: swagger-lint
+    description: Run the swagger linter
+    run: playbooks/swagger-lint.yaml
+    nodeset:
+      nodes:
+        - name: test-host
+          label: dib-centos-7
+
+- job:
+    name: swagger-publish
+    description: Publish the swagger file
+    run: playbooks/swagger-publish.yaml
+    secrets:
+      - swagger_secret
+    nodeset:
+      nodes:
+        - name: publish-host
+          label: dib-centos-7
