rename lyx-fonts lyx
Change-Id: I3078eaf8cc8eacb8472bcf1ce8f38854160a4e07

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -792,7 +792,7 @@ packages:
     source: external
   - name: software-factory/libwebsockets
     source: external
-  - name: software-factory/lyx-fonts
+  - name: software-factory/lyx
     source: external
   - name: software-factory/monit
     source: external
