Add job for building sf-doc.
This replaces https://softwarefactory-project.io/r/#/c/10668.

Change-Id: I44605393a01fd0db9aaa87aee98fd2e775ce74d2
Co-Authored-By: Tristan De Cacqueray <tdecacqu@redhat.com>

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -43,3 +43,10 @@
       nodes:
         - name: publish-host
           label: dib-centos-7
+
+- job:
+    name: sf-docs-build
+    description: Build the sf docs
+    run: playbooks/build.yaml
+    post-run: playbooks/publish.yaml
+    success-url: 'docs-html/index.html'
