Add linters jobs for sf-config
Change-Id: I581b8e8d7728a2e896729797171fc8082c3a4179

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -37,6 +37,9 @@
 #    name: software-factory/sf-config
 #    templates:
 #      - sf-jobs
+#    check:
+#      jobs:
+#        - linters
 
 # Internal SF python projects
 #- project:
