Set job for sf-desktop-notifications
Change-Id: I67f6b988ad74433d7dc267c5ff37b71331716e9a

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -94,7 +94,12 @@
 #    check:
 #      jobs:
 #        - sf-docs-build
-
+#
+#- project:
+#    name: software-factory/sf-desktop-notifications
+#    templates:
+#      - sf-python-jobs
+#
 # Zuul sphinx req
 - project:
     name: scl/python-imagesize-distgit
