Add missing sf-ci project pipelines
Change-Id: I2a0f22e4fbba66ae933c7447e43acd294aea25c8

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -22,6 +22,14 @@
         - linters
 
 - project:
+    name: software-factory/sf-ci
+    templates:
+      - sf-jobs
+    check:
+      jobs:
+        - linters
+
+- project:
     name: software-factory/sf-distgit
     templates:
       - sf-packaging-jobs
