Add sf-ci-jobs template w/o rpm-publish for sf-ci repo
Change-Id: I0ff737123b94b7b7fa79b7b958f03d51c3eec992

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -24,10 +24,7 @@
 - project:
     name: software-factory/sf-ci
     templates:
-      - sf-jobs
-    check:
-      jobs:
-        - linters
+      - sf-ci-jobs
 
 - project:
     name: software-factory/sf-distgit
@@ -122,7 +119,7 @@
       jobs:
         - sf-docs-build
 
-#- project:
-#    name: software-factory/sf-desktop-notifications
-#    templates:
-#      - sf-python-jobs
+- project:
+    name: software-factory/sf-desktop-notifications
+    templates:
+      - sf-python-jobs
