--- a/playbooks/swagger-lint.yaml
+++ b/playbooks/swagger-lint.yaml
@@ -17,7 +17,7 @@
         - gcc-c++
         - make
         - nodejs
-        state: lastest
+        state: latest
       become: yes
 
     - name: Install swagger
