Add doc8 package
Change-Id: I0ccbb0ca2715f5de4ca9a5132cf93135993ff2d8

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -574,6 +574,12 @@ packages:
   - name: software-factory/yamllint
     source: external
 
+  - name: software-factory/python-restructuredtext-lint
+    source: external
+
+  - name: software-factory/doc8
+    source: external
+
   - name: software-factory/bashate
     source: external
 
