Fix typo in swagger linter job, add missing vars
Change-Id: I8714acd97a96c3adc70dc78f2c1b5413aac639e7

--- a/playbooks/swagger-lint.yaml
+++ b/playbooks/swagger-lint.yaml
@@ -24,7 +24,7 @@
       command: npm install -g swagger-cli
       become: yes
 
-    - name: "Run the swagger linter on {{ swagger_file }}"
-      command: "swagger-cli validate {{ swagger_file }}"
+    - name: Run the swagger linter
+      command: swagger-cli validate {{ swagger_file }}
       args:
         chdir: src_dir
