fix incorrect path var
Change-Id: Ie5b1c93be481b66d92cc07f2f9971fd6e3436ef0

--- a/playbooks/swagger-publish.yaml
+++ b/playbooks/swagger-publish.yaml
@@ -10,4 +10,4 @@
         headers:
           Authorization: swagger_secret.key
         args:
-          chdir: src_dir
+          chdir: zuul.project.src_dir
