sf-docs: Fix playbooks name
sfdocbuild and sfdocpublish are the right playbooks to use to build and
publish docs.

Change-Id: I6d1e7b707e9849ba2932d10303a549bd79cb128d

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -47,6 +47,6 @@
 - job:
     name: sf-docs-build
     description: Build the sf docs
-    run: playbooks/build.yaml
-    post-run: playbooks/publish.yaml
+    run: playbooks/sfdocbuild.yaml
+    post-run: playbooks/sfdocpublish.yaml
     success-url: 'docs-html/index.html'
