Add logreduce requirements
Change-Id: Id62de51cfc0e23a4865f29407dd7e17cbc14c4ff

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -265,6 +265,18 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-scikit-learn
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-joblib
+    source: external
+    scl: rh-python35
+
+  - name: scl/scipy
+    source: external
+    scl: rh-python35
+
   - name: scl/python-paste
     source: external
     scl: rh-python35
