--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -72,18 +72,24 @@
         - swagger-lint:
             vars:
               swagger_file: "docs/swagger/managesf.v2.yaml"
+            files:
+              - "docs/swagger/managesf.v2.yaml"
     gate:
       queue: sf
       jobs:
         - swagger-lint:
             vars:
-              swagger_file: "docs/swagger/managesf.v2.yaml"
+              swagger_file: "docs/swagger/nanagesf.v2.yaml"
+            files:
+              - "docs/swagger/managesf.v2.yaml"
         - swagger-publish:
             dependencies:
               - swagger-lint
             vars:
               swagger_api: manageSF
               swagger_file: "docs/swagger/managesf.v2.yaml"
+            files:
+              - "docs/swagger/managesf.v2.yaml"
 
 - project:
     name: software-factory/pysflib
