Activate the build page job for www.softwarefactory-project.io
Change-Id: I6ef0e86d2c9d9eb9d53f97c259ea0b18bf239245

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -58,8 +58,11 @@
 
 - project:
     name: www.softwarefactory-project.io
-    templates:
-      - sf-noop
+    check:
+      jobs:
+        - build-pages:
+            vars:
+              src_dir: website
 
 # Internal SF python projects
 - project:
