--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -25,6 +25,10 @@
     name: software-factory/sf-ci
     templates:
       - sf-ci-jobs
+    periodic:
+      jobs:
+        - sf-deploy-stable
+        - sf-deploy-stable-cr
 
 - project:
     name: software-factory/sf-distgit
