--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -63,6 +63,12 @@
         - build-pages:
             vars:
               src_dir: website
+    gate:
+      jobs:
+        - noop
+    post:
+      jobs:
+        - wwwsf-build-and-publish-pages
 
 # Internal SF python projects
 - project:
