Set publish gate job for www.softwarefactory-project.io
Change-Id: Ifdeac836a8addacf6f5a5d624f3dbfa0128e502e
Depends-on: If97f985416b11ce01c4041e150627a88435ba560

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -63,6 +63,9 @@
         - build-pages:
             vars:
               src_dir: website
+    gate:
+      jobs:
+        - wwwsf-build-and-publish-pages
 
 # Internal SF python projects
 - project:
