DNM patch to test periodic jobs
Depends-on: I3d7090c2cc4055b3620c1e118b2ef67a92471ff1
Change-Id: Iea9292061f3f7d2404a3c4d6a562f38621281d99

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -25,6 +25,10 @@
     name: software-factory/sf-ci
     templates:
       - sf-ci-jobs
+    check:
+      jobs:
+        - sf-deploy-stable
+        - sf-deploy-stable-cr
     periodic:
       jobs:
         - sf-deploy-stable
