Add pysflib-distgit and cauth-distgit as required project
Both project have an external distgit repo.

RuntimeError: software-factory/cauth-distgit: not found, please add to required_projects

Change-Id: I56565d5f70d85249401277d58c11b44521f51d81

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -5,6 +5,8 @@
     run: playbooks/rpmbuild.yaml
     required-projects:
       - software-factory/sfinfo
+      - software-factory/cauth-distgit
+      - software-factory/pysflib-distgit
     nodeset:
       nodes:
         - name: mock-host
