--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -19,6 +19,8 @@
     hold-following-changes: true
     required-projects:
       - software-factory/sfinfo
+      - software-factory/cauth-distgit
+      - software-factory/pysflib-distgit
     secrets:
       - sf_koji_configuration
     nodeset:
