cauth/pysflib: set required-projects locally
Change-Id: I7641d605eb15b9caef5d04b2f874fd87f3b3189a

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -109,12 +109,42 @@
     templates:
       - sf-python-jobs
       - sf-jobs
+    check:
+      jobs:
+        - sf-rpm-build:
+            required-project:
+              - software-factory/pysflib-distgit
+    gate:
+      jobs:
+        - sf-rpm-build:
+            required-project:
+              - software-factory/pysflib-distgit
+    gate:
+      jobs:
+        - sf-rpm-publish:
+            required-project:
+              - software-factory/pysflib-distgit
 
 - project:
     name: software-factory/cauth
     templates:
       - sf-python-jobs
       - sf-jobs
+    check:
+      jobs:
+        - sf-rpm-build:
+            required-project:
+              - software-factory/cauth-distgit
+    gate:
+      jobs:
+        - sf-rpm-build:
+            required-project:
+              - software-factory/cauth-distgit
+    gate:
+      jobs:
+        - sf-rpm-publish:
+            required-project:
+              - software-factory/cauth-distgit
 
 - project:
     name: software-factory/python-sfmanager
