--- a/playbooks/rpmpublish.yaml
+++ b/playbooks/rpmpublish.yaml
@@ -7,6 +7,10 @@
     # Get workspace path to run zuul_rpm_* commands
     sfnamespace_path: "{{ sfinfo_path | dirname | dirname }}"
   tasks:
+    - name: Copy rpm-gpg keys
+      become: yes
+      command: "rsync -a {{ sfinfo_path }}/rpm-gpg/ /etc/pki/rpm-gpg/"
+
     - name: "Ensure buildset_artifacts_url is set or zuul.pipeline == tag"
       fail:
         msg: "Can't publish untested package (no buildset_artifacts) or untagged change"
