Add stable info file for release sf-3.0
Change-Id: I4224930b983289875c252ab5f42cfa397907e21c

--- a/sf-3.0.yaml
+++ b/sf-3.0.yaml
@@ -5,7 +5,7 @@ koji-target: sf-3.0-el7
 signing_key: 1c3bae4b
 arch: x86_64
 koji-url: https://softwarefactory-project.io/kojifiles/repos/sf-3.0-el7-build/latest/x86_64/
-branch: master
+branch: 3.0
 packages:
   # ===========================================================================
   # Services packages
