Add logreduce package
Change-Id: Id73a2b5de2a8c1742c77f7229b3345a7fb95d871

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -94,6 +94,11 @@ packages:
   - name: software-factory/zookeeper-lite
     source: external
 
+  - name: logreduce
+    source: internal
+    spec: included
+    scl: rh-python35
+
   # Nodepool
   - name: scl/diskimage-builder
     source: external
