--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -9,6 +9,12 @@
         - linters
 
 - project:
+    name: logreduce
+    release:
+      jobs:
+        - sf-rpm-publish
+
+- project:
     name: software-factory/firehooks
     templates:
       - sf-packaging-jobs
