Add hound (code search) package
Change-Id: Ic3d8c570104ab54fee40b987881397605509895a

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -152,6 +152,10 @@ packages:
     source: external
     scl: rh-python35
 
+  # Codesearch
+  - name: software-factory/hound
+    source: external
+
   # Storyboard
   - name: software-factory/storyboard
     source: external
