Add packaging job for passlib and flask-httpauth
Change-Id: I3f2e4a580d3bc16253319ad580bf892c371ce273

--- a/zuul.d/projects-scl.yaml
+++ b/zuul.d/projects-scl.yaml
@@ -27,6 +27,14 @@
     name: scl/python-pymod2pkg-distgit
     templates:
       - sf-packaging-jobs
+- project:
+    name: scl/python-passlib-distgit
+    templates:
+      - sf-packaging-jobs
+- project:
+    name: scl/python-flask-httpauth-distgit
+    templates:
+      - sf-packaging-jobs
 
 - project:
     name: scl/python-scikit-learn-distgit
