Add missing repo passlib and flask-httpauth to sf-master
Change-Id: Ia6ed73a9de3fcc45a56ff564dc2904af1d6c3e6f

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -462,6 +462,12 @@ packages:
   - name: scl/python-pymod2pkg
     source: external
     scl: rh-python35
+  - name: scl/python-passlib
+    source: external
+    scl: rh-python35
+  - name: scl/python-flask-httpauth
+    source: external
+    scl: rh-python35
 #  - name: scl/python-koji
 #    source: external
 #    scl: rh-python35
