Add hound packaging jobs
Change-Id: Ie08519488968ebbce6435d77c4c8bf6b1d201500

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -9,6 +9,11 @@
         - linters
 
 - project:
+    name: software-factory/hound-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
     name: logreduce
     release:
       jobs:
