Add sphinxcontrib httpdomain
Change-Id: I427c68609345e8a729cdb30de2ab1d0dcf3c257d

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -750,6 +750,9 @@ packages:
   - name: scl/python-sphinxcontrib-programoutput
     source: external
     scl: rh-python35
+  - name: scl/python-sphinxcontrib-httpdomain
+    source: external
+    scl: rh-python35
   - name: scl/python-sphinx-autodoc-typehints
     source: external
     scl: rh-python35
