--- a/zuul.d/projects-scl.yaml
+++ b/zuul.d/projects-scl.yaml
@@ -773,6 +773,11 @@
       - sf-packaging-jobs
 
 - project:
+    name: scl/python-sphinxcontrib-httpdomain-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
     name: scl/python-sphinx-autodoc-typehints-distgit
     templates:
       - sf-packaging-jobs
