acme: only run packaging jobs
Change-Id: I48d8b95d5f90bea1e7dfd94a85bf8fa4726797b0

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -2,7 +2,7 @@
 - project:
     name: software-factory/acme-tiny-distgit
     templates:
-      - sf-jobs-light
+      - sf-packaging-jobs
 
 - project:
     name: software-factory/ansible-lint-distgit
