Add missing slugify requirements in 3.0 and master
Change-Id: I1c5fb7de19b64b22ad8c99ee60cffefa39900517

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -811,6 +811,9 @@ packages:
   - name: software-factory/python-testinfra
     source: external
 
+  # python-grafyaml depends
+  - name: software-factory/python-slugify
+    source: external
 
   # Gerritbot
   - name: software-factory/python-backports-functools-lru-cache
