sf: add python-tqdm package
Change-Id: Ibe7153d63407cc5ed9f9fb3e6ccf62faafc73e46

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -947,6 +947,8 @@ packages:
     source: external
   - name: software-factory/python-twine
     source: external
+  - name: software-factory/python-tqdm
+    source: external
   - name: software-factory/python-unidecode
     source: external
   - name: software-factory/uthash
