Add dlrnapi-client in sfinfo
Change-Id: If871b7e8a2befd83f7db64c7d9a0b6326e1ccb21

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -151,6 +151,9 @@ packages:
   - name: scl/dlrn
     source: external
     scl: rh-python35
+  - name: scl/dlrnapi-client
+    source: external
+    scl: rh-python35
 
   # Codesearch
   - name: software-factory/hound
